--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -2,6 +2,7 @@
    background: #FFFFFF;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.07);
    display: flex;
+   transition: all .3s ease;
 
    //TODO: Delete margins
    margin: 20px 24px;
@@ -13,6 +14,18 @@
    &__info {
       flex-grow: 1;
       margin: 25px 0;
+   }
+   
+   &__second-info {
+      display: flex;
+   }
+
+   &__parametres-gray {
+      color: #9E9E9E;
+   }
+
+   &__color-square {
+      display: inline-block;
    }
 
    &__close-button {
@@ -39,3 +52,4 @@
       justify-content: space-between;
    }
 }
+
