--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "variables";
+@import "breakpoints";
 @import "base";
 
-@import "./blocks/product-card";
+@import "blocks/product-card";
