--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -3,22 +3,73 @@
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.07);
    display: flex;
    transition: all .3s ease;
-
-   //TODO: Delete margins
    margin: 20px 24px;
 
    &__image {
-      margin: 22px 40px  23px 20px;  
+      margin: 22px 40px  23px 20px;
+      width: 100px;
+      height: 75px;
+      
+      @include sm {
+         width: 60px;
+         height: 35px;
+      }
    }
 
    &__info {
       flex-grow: 1;
       margin: 25px 0;
    }
+
+   &__name {
+      
+      @include sm {
+         font-size: 12px;
+         line-height: 14px;
+         font-weight: 400;
+      }
+   }
+
+   &__price {
+      @include sm {
+         display: none;
+      }
+   }
    
    &__second-info {
       display: flex;
+
+      @include sm {
+      display: none;
+      font-size: 5px;
+      line-height: 13px;
+      }
    }
+
+   &__info-mobile {
+      display: none;
+
+      @include sm {
+         display: flex;
+      }
+   }
+
+   &__quantity-mobile {
+      font-size: 11px;
+      line-height: 13px;
+      padding: 4px 10px;
+      border: 1px solid #E6E6E6;
+      border-radius: 7px;
+      margin-right: auto;
+   }
+
+   &__price-mobile {
+      font-size: 11px;
+      line-height: 13px;
+      align-self: center;
+   }
+
+   
 
    &__parametres-gray {
       color: #9E9E9E;
@@ -26,6 +77,13 @@
 
    &__color-square {
       display: inline-block;
+   }
+
+   &__quantity {
+
+      @include sm {
+      display: none;
+      }
    }
 
    &__close-button {
@@ -53,3 +111,12 @@
    }
 }
 
+.second-info__mobile {
+   display: none;
+   font-size: 10px;
+   line-height: 10px;
+
+   @include sm {
+      display: inline;
+   }
+}
